force-app/main/default/objects/Provider_Network__c/Provider_Network__c.object-meta.xml
<CustomObject>
    <label>Provider Network</label>
    <nameField>
        <label>Provider Network Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Provider Networks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>