force-app/main/default/objects/Provider_Network__c/fields/Coverage__c.field-meta.xml
<CustomField>
    <fullName>Coverage__c</fullName>
    <label>Coverage</label>
    <scale>15</scale>
    <type>Location</type>
</CustomField>