force-app/main/default/objects/Provider_Network__c/fields/Offering_Details__c.field-meta.xml
<CustomField>
    <fullName>Offering_Details__c</fullName>
    <label>Offering Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>