force-app/main/default/objects/Provider_Network__c/recordTypes/Provider_Network.recordType-meta.xml
<RecordType>
    <fullName>Provider_Network</fullName>
    <active>true</active>
    <label>Provider Network</label>
</RecordType>